# clang-tutorial-note

./: README.md
CodeGenEx/: CMakeLists.txt  CodeGenEx.cpp  README.md  Test_Rewrite.cpp
Decl_Stmt_Note/: Decl_Stmt_Note.md  clang_type_note.md  example.c  macro.md
FindClassDecls/: FindClassDecls.cpp
FindClassDecls_cmake/: CMakeLists.txt  FindClassDecls.cpp  note.md  test.cpp
GenIR/: CMakeLists.txt  GenIR.cpp  Test_Rewrite.cpp
Rewrite_Start/: CMakeLists.txt  RewriteDemo.cpp  Test_Rewrite.cpp  note.md
